maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^IslandMaze:2: error: expected start of definition
override def run() {
         ^IslandMaze:11: error: expected class or object definition
def keepHandOnSideWall() {
^